--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -62,10 +62,16 @@ Package V2.0
 
 # Multi omics and multi tissues analysis
 
+  package v1.0
+
   * LDL - Liver and Adipose - Expression and Splicing [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_Liver_Adipose_E_S.html)
   * LDL - Multi contexts/types [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_multi_context_type.html)
-  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- load predicdb LD](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights.html)
-  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb.html)
-  * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_summary.html)
   
+  package v2.0
+  
+  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- load predicdb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights.html)
+  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb.html)
+  * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_summary.html)
+  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_munro.html)
+  * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_munro_summary.html)
   
